@@ -364,3 +364,9 @@
 2012-02-24  Jihoon Kim
 
 	* add edje_object_part_text_imf_context_get for getting Ecore_IMF_Context handle in edje text object
+
+2012-02-29  Tom Hacohen (TAsn)
+
+	* Entry: Added edje_object_part_text_user_insert.
+	This function inserts text as if the user has inserted it.
+	This means it actually registers as a change and etc.
